RESOLVED FIXED 234665
[GTK][a11y] Test /webkit/WebKitAccessibility/selection/listbox is flaky with ATSPI
https://bugs.webkit.org/show_bug.cgi?id=234665
Summary [GTK][a11y] Test /webkit/WebKitAccessibility/selection/listbox is flaky with ...
Carlos Garcia Campos
Reported 2021-12-24 08:25:12 PST
The problem is that selection-changed can be called multiple times for list boxes. When the notification is deferred by the AXObject cache, it's ensured to be called only one for every element in the following run loop iteration, but when not deferred the signal is emitted for every notification.
Attachments
Patch (2.72 KB, patch)
2021-12-24 08:29 PST, Carlos Garcia Campos
aperez: review+
Carlos Garcia Campos
Comment 1 2021-12-24 08:29:15 PST
Carlos Garcia Campos
Comment 2 2021-12-26 23:36:17 PST
Note You need to log in before you can comment on or make changes to this bug.